@@ -3,6 +3,8 @@ libmpdclient 2.20 (not yet released)
   - getvol
 * support MPD protocol 0.22.4
   - binarylimit
+* support tags "ComposerSort", "Ensemble", "Movement",
+  "MovementNumber", "Location"
 
 libmpdclient 2.19 (2020/07/03)
 * fix off-by-one bug in MPD_HOST parser
